@@ -37,9 +37,9 @@ be_visitor_exception_cdr_op_cs::visit_exception (be_exception *node)
   if (this->visit_scope (node) == -1)
     {
       ACE_ERROR_RETURN ((LM_ERROR,
-                         "(%N:%l) be_visitor_exception_cdr_op_cs::"
-                         "visit_exception - "
-                         "codegen for scope failed\n"),
+                         ACE_TEXT ("(be_visitor_exception_cdr_op_cs::")
+                         ACE_TEXT ("visit_exception - ")
+                         ACE_TEXT ("codegen for scope failed\n")),
                         -1);
     }
 
@@ -69,9 +69,9 @@ be_visitor_exception_cdr_op_cs::visit_exception (be_exception *node)
       if (field_decl.visit_scope (node) == -1)
         {
           ACE_ERROR_RETURN ((LM_ERROR,
-                             "(%N:%l) be_visitor_exception_cdr_op_cs::"
-                             "visit_exception - "
-                             "codegen for field decl scope failed\n"),
+                             ACE_TEXT ("be_visitor_exception_cdr_op_cs::")
+                             ACE_TEXT ("visit_exception - ")
+                             ACE_TEXT ("codegen for field decl scope failed\n")),
                             -1);
         }
 
@@ -85,9 +85,9 @@ be_visitor_exception_cdr_op_cs::visit_exception (be_exception *node)
       if (this->visit_scope (node) == -1)
         {
           ACE_ERROR_RETURN ((LM_ERROR,
-                             "(%N:%l) be_visitor_exception_cdr_op_cs::"
-                             "visit_exception - "
-                             "codegen for scope failed\n"),
+                             ACE_TEXT ("be_visitor_exception_cdr_op_cs::")
+                             ACE_TEXT ("visit_exception - ")
+                             ACE_TEXT ("codegen for scope failed\n")),
                             -1);
         }
 
@@ -139,7 +139,15 @@ be_visitor_exception_cdr_op_cs::visit_exception (be_exception *node)
     {
       be_visitor_context new_ctx (*this->ctx_);
       be_visitor_cdr_op_field_decl field_decl (&new_ctx);
-      field_decl.visit_scope (node);
+
+      if (field_decl.visit_scope (node) == -1)
+        {
+          ACE_ERROR_RETURN ((LM_ERROR,
+                             ACE_TEXT ("be_visitor_exception_cdr_op_cs::")
+                             ACE_TEXT ("visit_exception - ")
+                             ACE_TEXT ("codegen for field decl failed\n")),
+                            -1);
+        }
 
       // Some members.
       *os << "// Demarshal the members." << be_nl
@@ -148,9 +156,9 @@ be_visitor_exception_cdr_op_cs::visit_exception (be_exception *node)
       if (this->visit_scope (node) == -1)
         {
           ACE_ERROR_RETURN ((LM_ERROR,
-                             "(%N:%l) be_visitor_exception_cdr_op_cs::"
-                             "visit_exception - "
-                             "codegen for scope failed\n"),
+                             ACE_TEXT ("be_visitor_exception_cdr_op_cs::")
+                             ACE_TEXT ("visit_exception - ")
+                             ACE_TEXT ("codegen for scope failed\n")),
                             -1);
         }
 
